# link-shortener-actix

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  launch_docker_db.sh
migrations/2022-07-13-074809_url_pair/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
