[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
chrono = {version= "0.4.19", features = ["serde"]}
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "0.8.0", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["uuidv07", "postgres", "chrono", "r2d2"] }
r2d2 = "0.8.10"
r2d2-diesel = "1"
dotenv = "0.15.0"
rand = "0.8.5"
# tracing = {version = "0.1", features= ["log"] }
# tracing-actix-web = "0.5"
# tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
# tracing-bunyan-formatter = "0.3"
# tracing-log = "0.1.3"
# validator = "0.15.0" 
# reqwest = {version = "0.11.11", features = ["json"]}
# secrecy = "0.8.0"
